--- a/apps/finder-frontend/brexit-checker-content-changes.html
+++ b/apps/finder-frontend/brexit-checker-content-changes.html
@@ -363,6 +363,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/finder-frontend/commit/1911de6e163a376066c20598386dfc3a04d763d4">10 Dec 2020</a>
 </div>
