--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
-      <li><a href="http://www.oldham.gov.uk/" class="govuk-link">Oldham Metropolitan Borough Council</a></li>
-      <li><a href="http://www.cookstown.gov.uk/" class="govuk-link">Cookstown District Council</a></li>
-      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
+      <li><a href="http://www.south-ayrshire.gov.uk" class="govuk-link">South Ayrshire Council</a></li>
       <li><a href="https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/" class="govuk-link">Book a coronavirus vaccination - NHS</a></li>
-      <li><a href="http://www.herefordshire.gov.uk" class="govuk-link">Herefordshire Council</a></li>
-      <li><a href="http://www.eden.gov.uk/" class="govuk-link">Eden District Council</a></li>
       <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
+      <li><a href="http://www.westsussex.gov.uk/" class="govuk-link">West Sussex County Council</a></li>
+      <li><a href="http://www.powys.gov.uk" class="govuk-link">Powys County Council</a></li>
+      <li><a href="http://www.herefordshire.gov.uk" class="govuk-link">Herefordshire Council</a></li>
+      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="http://www.harborough.gov.uk" class="govuk-link">Harborough District Council</a></li>
+      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
