--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.south-ayrshire.gov.uk" class="govuk-link">South Ayrshire Council</a></li>
-      <li><a href="http://www.harborough.gov.uk" class="govuk-link">Harborough District Council</a></li>
-      <li><a href="http://www.southbucks.gov.uk" class="govuk-link">South Bucks District Council</a></li>
-      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
-      <li><a href="http://www.herefordshire.gov.uk" class="govuk-link">Herefordshire Council</a></li>
-      <li><a href="http://www.tandridge.gov.uk" class="govuk-link">Tandridge District Council</a></li>
-      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
-      <li><a href="http://www.havant.gov.uk" class="govuk-link">Havant Borough Council</a></li>
-      <li><a href="http://www.boroughofpoole.com" class="govuk-link">Borough of Poole Council</a></li>
+      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
+      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
+      <li><a href="http://www.walsall.gov.uk/" class="govuk-link">Walsall Metropolitan Borough Council</a></li>
+      <li><a href="http://www.derby.gov.uk" class="govuk-link">Derby City Council</a></li>
+      <li><a href="http://findyourmp.parliament.uk/" class="govuk-link">Find your MP - UK Parliament</a></li>
+      <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
+      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
       <li><a href="http://www.e-lindsey.gov.uk" class="govuk-link">East Lindsey District Council</a></li>
+      <li><a href="http://www.hertsmere.gov.uk/" class="govuk-link">Hertsmere Borough Council</a></li>
+      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
